# localstack-dependencies

./: README.md  pyproject.toml
endpointer/: api.py  http.py  lambdaf.py  regexp.py  resource.py  session.py
